<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linear1_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Easy Learning"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView_login"
            android:layout_width="201dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:srcCompat="@drawable/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="11dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="21dp"
                android:paddingStart="4dp"
                android:text="Email"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="11dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="21dp"
                android:paddingStart="4dp"
                android:text="Password"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                app:cardBackgroundColor="#00FFFFFF"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btn_eye_login"
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="27dp"
                    android:background="@drawable/ic_baseline_visibility_off_24" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="11dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:backgroundTint="#33C1ED"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="Login"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="31dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="Don't have account ?"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_register_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="Sign Up"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textStyle="italic"
                app:iconPadding="0dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>